--- a/pengujian.html
+++ b/pengujian.html
@@ -219,6 +219,10 @@
   let pendingDeleteId = null, deleteNotified = false;
   let isDeleting = false;
   let nilaiMapGlobal = new Map();
+  // In-memory authoritative profile fetched from server; use cached localStorage for fast render
+  let CURRENT_PROFILE = null;
+  function getProfile(){ try{ return CURRENT_PROFILE || JSON.parse(localStorage.getItem('auth_profile')||'{}'); }catch(e){ return {}; } }
+  async function fetchServerProfile(token){ if(!token) return null; try{ const resp = await jsonp(`${BASE}?dataset=auth&route=check&token=${encodeURIComponent(token)}`); if(resp && resp.ok && resp.profile) return resp.profile; return null; }catch(e){ return null; } }
 
     // Lightweight toast helper (matches dashboard style)
     (function(){
@@ -313,10 +317,8 @@
 
     function requireGuru(){
       const token = localStorage.getItem('auth_token');
-      const prof = JSON.parse(localStorage.getItem('auth_profile')||'{}');
       if(!token){ location.href = 'login.html?to=' + encodeURIComponent('pengujian.html'); return null; }
-      if((prof.role||'').toLowerCase() !== 'guru'){ location.href = 'dashboard.html'; return null; }
-      return token;
+      return token; // role check will happen after background validation
     }
 
     function jsonp(url){
@@ -344,7 +346,7 @@
     }
 
     function greet(){
-      const prof = JSON.parse(localStorage.getItem('auth_profile')||'{}');
+      const prof = getProfile();
       const nameRaw = (prof.nama || prof.username || 'Pengguna').trim();
       const name = nameRaw || 'Pengguna';
       const parts = name.split(/\s+/).filter(Boolean);
@@ -427,7 +429,7 @@
       btnPKL.addEventListener('click', ()=> activate('pkl')); btnUKK.addEventListener('click', ()=> activate('ukk')); activate('pkl');
     }
 
-    function getGuruName(){ const prof = JSON.parse(localStorage.getItem('auth_profile')||'{}'); return (prof.nama || prof.username || '').trim(); }
+  function getGuruName(){ const prof = getProfile(); return (prof.nama || prof.username || '').trim(); }
 
     async function loadPengujian(){
       try{
@@ -492,7 +494,41 @@
       }
     }
 
-    function init(){ setupProfileMenu(); setupBurger(); const token=requireGuru(); if(!token) return; greet(); setupTabs(); loadPengujian(); const mc=document.getElementById('modalCancel'); const mcf=document.getElementById('modalConfirm'); const modal=document.getElementById('confirmModal'); if(mc) mc.addEventListener('click', closeConfirm); if(mcf) mcf.addEventListener('click', performDelete); if(modal){ modal.addEventListener('click', (e)=>{ if(e.target===modal || e.target.classList.contains('bg-black/40')) closeConfirm(); }); } if(window.lucide && typeof window.lucide.createIcons === 'function'){ window.lucide.createIcons(); } }
+    function init(){
+      setupProfileMenu(); setupBurger();
+      const token = requireGuru(); if(!token) return;
+      // Render minimal UI from cached profile (no teacher data yet)
+      try{ const cached = JSON.parse(localStorage.getItem('auth_profile')||'null'); if(cached) CURRENT_PROFILE = cached; }catch(e){ CURRENT_PROFILE = null; }
+      greet(); setupTabs();
+      // Background: validate token and role before loading sensitive teacher data
+      (async ()=>{
+        try{
+          const profile = await fetchServerProfile(token);
+          if(!profile){
+            localStorage.removeItem('auth_token'); localStorage.removeItem('auth_profile'); CURRENT_PROFILE = null;
+            toast('err','Sesi tidak valid. Mengarahkan ke login...');
+            setTimeout(()=> location.href='login.html?to='+encodeURIComponent('pengujian.html'),1200);
+            return;
+          }
+          if((profile.role||'').toLowerCase() !== 'guru'){
+            toast('err','Anda tidak memiliki akses ke halaman ini. Mengalihkan ke dashboard...');
+            setTimeout(()=> location.href='dashboard.html',800);
+            return;
+          }
+          // token valid and role ok → set authoritative profile and load data
+          CURRENT_PROFILE = profile; try{ localStorage.setItem('auth_profile', JSON.stringify(profile)); }catch(_){}
+          greet();
+          loadPengujian();
+        }catch(e){
+          // network/server error: keep page in minimal state and notify user
+          console.warn('Background validation failed', e && e.message);
+          toast('err','Gagal memverifikasi sesi (jaringan). Silakan coba ulang.');
+        }
+      })();
+
+      const mc=document.getElementById('modalCancel'); const mcf=document.getElementById('modalConfirm'); const modal=document.getElementById('confirmModal'); if(mc) mc.addEventListener('click', closeConfirm); if(mcf) mcf.addEventListener('click', performDelete); if(modal){ modal.addEventListener('click', (e)=>{ if(e.target===modal || e.target.classList.contains('bg-black/40')) closeConfirm(); }); }
+      if(window.lucide && typeof window.lucide.createIcons === 'function'){ window.lucide.createIcons(); }
+    }
     // Score modal logic
     function openScoreModal(username, nama, has){
       const modal = document.getElementById('scoreModal'); if(!modal) return;
