--- a/index.html
+++ b/index.html
@@ -36,17 +36,34 @@
     /* Dekorasi halus untuk header */
     .hero-decor::before, .hero-decor::after { content: ""; position: absolute; inset: 0; pointer-events: none; }
     .hero-decor::before { background:
-      radial-gradient(40% 50% at 100% 0%, rgba(16,185,129,.18), transparent 60%),
-      radial-gradient(35% 45% at 0% 100%, rgba(14,165,233,.18), transparent 60%);
+      radial-gradient(40% 50% at 100% 0%, rgba(16,185,129,.26), transparent 60%),
+      radial-gradient(35% 45% at 0% 100%, rgba(14,165,233,.26), transparent 60%);
     }
     .hero-decor::after { background:
-      radial-gradient(20% 20% at 60% 10%, rgba(20,184,166,.15), transparent 60%);
+      radial-gradient(20% 20% at 60% 10%, rgba(20,184,166,.22), transparent 60%);
     }
+    /* Reduce flicker by promoting hero to its own compositing layer and disabling backface flicker */
+    .hero-decor { -webkit-transform: translateZ(0); transform: translateZ(0); -webkit-backface-visibility: hidden; backface-visibility: hidden; will-change: transform, opacity; }
       .bg-grid { background-image:
       linear-gradient(to right, rgba(15,23,42,.04) 1px, transparent 1px),
       linear-gradient(to bottom, rgba(15,23,42,.04) 1px, transparent 1px);
       background-size: 24px 24px;
     }
+    /* Animated hamburger <-> close crossfade */
+    .burger-svg { width: 22px; height: 22px; display: block; }
+    .burger-hamburger, .burger-close {
+      position: absolute; left: 50%; top: 50%; display: inline-block; width: 22px; height: 22px;
+      /* center with translate; scale applied together with translate to animate */
+      transform: translate(-50%, -50%) scale(1);
+    }
+    .burger-hamburger { opacity: 1; transition: opacity .18s ease, transform .18s ease; }
+    .burger-hamburger .burger-line { transition: transform .22s cubic-bezier(.4,0,.2,1), opacity .18s ease; transform-origin: center; }
+    .burger-close { opacity: 0; transition: opacity .18s ease, transform .18s ease; transform: translate(-50%, -50%) scale(.9); }
+    /* When open: hide hamburger (fade+scale), show close (fade+scale) — keep translate for centering */
+    #burgerBtn.open .burger-hamburger { opacity: 0; transform: translate(-50%, -50%) scale(.85); }
+    #burgerBtn.open .burger-close { opacity: 1; transform: translate(-50%, -50%) scale(1); }
+    /* Slight color emphasis for close line */
+    .burger-close .close-line { stroke: currentColor; stroke-width: 2.2; stroke-linecap: round; }
     @keyframes fadeUp { from { opacity: 0; transform: translateY(8px); } to { opacity: 1; transform: translateY(0); } }
     .animate-fade-up { animation: fadeUp .5s ease-out both; }  </style>
 
@@ -96,12 +113,18 @@
 
         </ul>
 
-        <button id="burgerBtn" aria-label="Buka menu navigasi" aria-controls="mobileMenu" aria-expanded="false" class="md:hidden inline-flex items-center justify-center h-9 w-9 rounded-lg border hover:bg-slate-100">
-
-          <i data-lucide="menu" id="burgerIcon" class="w-5 h-5"></i>
-
-          <i data-lucide="x" id="closeIcon" class="w-5 h-5 hidden"></i>
-
+        <button id="burgerBtn" aria-label="Buka menu navigasi" aria-controls="mobileMenu" aria-expanded="false" class="md:hidden relative inline-flex items-center justify-center h-9 w-9 rounded-lg border hover:bg-slate-100">
+          <!-- Hamburger icon group -->
+          <svg viewBox="0 0 24 24" class="burger-svg burger-hamburger" aria-hidden="true" focusable="false">
+            <rect class="burger-line" x="3" y="6" width="18" height="2" rx="1" fill="currentColor" />
+            <rect class="burger-line" x="3" y="11" width="18" height="2" rx="1" fill="currentColor" />
+            <rect class="burger-line" x="3" y="16" width="18" height="2" rx="1" fill="currentColor" />
+          </svg>
+          <!-- Close icon group (cross) -->
+          <svg viewBox="0 0 24 24" class="burger-svg burger-close" aria-hidden="true" focusable="false">
+            <line class="close-line" x1="6" y1="6" x2="18" y2="18" stroke="currentColor" />
+            <line class="close-line" x1="6" y1="18" x2="18" y2="6" stroke="currentColor" />
+          </svg>
         </button>
 
       </div>
@@ -443,24 +466,42 @@
     })();
     // BASE_URL tersedia di window.APP_CONFIG jika diperlukan di masa depan
 
-    const burgerBtn=document.getElementById('burgerBtn');
+    (function setupBurger(){
+      const burgerBtn = document.getElementById('burgerBtn');
+      const mobileMenu = document.getElementById('mobileMenu');
+      if(!burgerBtn || !mobileMenu) return;
 
-    const burgerIcon=document.getElementById('burgerIcon');
+      // ensure ARIA wiring
+      burgerBtn.setAttribute('aria-controls', 'mobileMenu');
+      burgerBtn.setAttribute('aria-expanded', 'false');
 
-    const closeIcon=document.getElementById('closeIcon');
+      const open = () => {
+        mobileMenu.classList.remove('hidden');
+        burgerBtn.classList.add('open');
+        burgerBtn.setAttribute('aria-expanded','true');
+        // prevent background scroll when menu open on small screens
+        document.body.classList.add('overflow-hidden');
+      };
 
-    const mobileMenu=document.getElementById('mobileMenu');
+      const close = () => {
+        mobileMenu.classList.add('hidden');
+        burgerBtn.classList.remove('open');
+        burgerBtn.setAttribute('aria-expanded','false');
+        document.body.classList.remove('overflow-hidden');
+      };
 
-    burgerBtn.addEventListener('click',()=>{
+      burgerBtn.addEventListener('click', (e) => { e.stopPropagation(); if(mobileMenu.classList.contains('hidden')) open(); else close(); });
 
-      mobileMenu.classList.toggle('hidden');
+      // Close when clicking outside the menu or button
+      document.addEventListener('click', (ev) => {
+        if(mobileMenu.classList.contains('hidden')) return;
+        if(burgerBtn.contains(ev.target) || mobileMenu.contains(ev.target)) return;
+        close();
+      });
 
-      burgerIcon.classList.toggle('hidden');
-
-      closeIcon.classList.toggle('hidden');
-      burgerBtn.setAttribute('aria-expanded', burgerBtn.getAttribute('aria-expanded') === 'true' ? 'false' : 'true');
-
-    });
+      // Close on Escape
+      document.addEventListener('keydown', (ev) => { if(ev.key === 'Escape') close(); });
+    })();
 
     document.getElementById('year').textContent=new Date().getFullYear();
 
