Update UKK Industri description for clarity and detail

--- a/index.html
+++ b/index.html
@@ -269,11 +269,10 @@
       </div>
 
       <p class="text-slate-700 leading-relaxed">
-
-        UKK Industri merupakan <strong>pengganti UKK mandiri</strong> yang sebelumnya dilakukan di sekolah.
-
-        Kini, uji kompetensi dilakukan <strong>bersamaan dengan kegiatan PKL</strong> oleh mitra industri.
-
+        <strong>Uji Kompetensi Keahlian (UKK) adalah asesmen akhir</strong> untuk membuktikan apakah siswa SMK sudah benar-benar kompeten di bidangnya. <strong>UKK wajib dilakukan karena diatur dalam undang-undang pendidikan</strong> dan menjadi <strong>syarat kelulusan serta penerbitan sertifikat kompetensi</strong>.
+      </p>
+      <p class="text-slate-700 leading-relaxed">
+        <strong>UKK dapat dilaksanakan dengan tiga cara:</strong> <strong>oleh industri</strong>, <strong>oleh SMK bekerja sama dengan Lembaga Sertifikasi Profesi (LSP)</strong>, atau <strong>secara mandiri di sekolah</strong>. Jika tahun sebelumnya sekolah melaksanakan UKK Mandiri, maka tahun ini UKK dilaksanakan langsung di dunia industri bersamaan dengan kegiatan PKL. <strong>Dengan cara ini, siswa diuji di lingkungan kerja nyata oleh tenaga ahli dari industri sehingga hasilnya lebih diakui dan sesuai kebutuhan dunia kerja.</strong>
       </p>
 
       <p class="mt-3 text-slate-700">
